--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {      
+    "require": {
         "laravel/socialite": "4.*",
-        "illuminate/support": "6.*"
+        "illuminate/support": "6.*|7.*"
     },
     "autoload" : {
         "psr-4": {
