--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "laravel/socialite": "4.*",
-        "illuminate/support": "6.*|7.*"
+        "laravel/socialite": "4.*|^5.0",
+        "illuminate/support": "6.*|7.*|8.*"
     },
     "autoload" : {
         "psr-4": {
